--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
-APP_NAME=Laravel
+APP_NAME=MyFinances
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:2TJL5Xrw8is280wf7ZwexGjDfTi60FWYJa0DfL9wvJ4=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=https://myfinances
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -11,9 +11,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=fin
+DB_USERNAME=fin
+DB_PASSWORD=qwerty
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
